assets/styles/pages/_project.scss
.project-container {
	position: relative;
	height: 100%;
	.project {
		position: absolute;
		top: 50%;
		transform: translateY(-50%);
		display: flex;
		flex-direction: column;
		gap: 20px;
		@media screen and (max-width: 673px) {
			flex-direction: column;
		}
		img {
			width: 100%;
			height: auto;
			box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
		}
		.page-title {
			margin: 0 0 20px 0;
			h1 {
				font-size: 32px;
				text-decoration: underline;
				text-decoration-color: $tertiary;
			}
		}
		.right {
			display: flex;
			flex-direction: column;
			gap: 5px;
		}
		&__description {
			line-height: 25px;
			margin-bottom: 18px;
		}
		&__tags-container {
			ul {
				display: flex;
				gap: 10px;
			}
			margin-bottom: 18px;
		}
		&__links {
			display: flex;
			flex-direction: row;
			gap: 30px;
			& > div {
				a {
					display: flex;
					gap: 16px;
					align-items: center;
					i {
						font-size: 40px;
					}
					span {
						font-weight: 500;
						text-decoration: underline;
						text-decoration-color: #ff6b08;
						text-underline-offset: 3px;
					}
				}
			}
		}
	}
}

